[package]
name = "topgrade"
version = "16.0.4"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>", "Thomas Schönauer <t.schoenauer@hgs-wt.at>"]
categories = ["os"]
edition = "2021"
exclude = ["doc/screenshot.gif", "BREAKINGCHANGES_dev.md"]
keywords = ["upgrade", "update"]
license = "GPL-3.0"
repository = "https://github.com/topgrade-rs/topgrade"
rust-version = "1.84.1"
description = "Upgrade all the things"

readme = "README.md"

[[bin]]
name = "topgrade"
path = "src/main.rs"

## [lib]
## name = "topgrade_lib"

[dependencies]
cfg-if = "~1.0"
chrono = "~0.4"
clap = { version = "~4.5", features = ["cargo", "derive"] }
clap_complete = "~4.5"
clap_mangen = "~0.2"
color-eyre = "~0.6"
console = "~0.15"
etcetera = "~0.8"
futures = "~0.3"
glob = "~0.3"
home = "~0.5"
indexmap = { version = "2.9.0", features = ["serde"] }
jetbrains-toolbox-updater = "5.0.0"
merge = "~0.1"
notify-rust = "~4.11"
regex = "~1.10"
regex-split = "~0.1"
rust-i18n = "3.0.1"
semver = "~1.0"
serde = { version = "~1.0", features = ["derive"] }
shell-words = "~1.1"
shellexpand = "~3.1"
strum = { version = "~0.26", features = ["derive"] }
sys-locale = "0.3.1"
tempfile = "~3.10"
thiserror = "~1.0"
tokio = { version = "~1.47", features = ["process", "rt-multi-thread"] }
toml = "0.8"
tracing = { version = "~0.1", features = ["attributes", "log"] }
tracing-subscriber = { version = "~0.3.20", features = ["env-filter", "time"] }
walkdir = "~2.5"
which_crate = { version = "~6.0", package = "which" }
wildmatch = "2.3.0"

[package.metadata.generate-rpm]
assets = [{ source = "target/release/topgrade", dest = "/usr/bin/topgrade" }]

[package.metadata.generate-rpm.requires]
git = "*"

[package.metadata.deb]
name = "topgrade"
maintainer = "Chris Gelatt <kreeblah@gmail.com>"
copyright = "2024, Topgrade Team"
license-file = ["LICENSE", "0"]
depends = "$auto"
extended-description = "Keeping your system up to date usually involves invoking multiple package managers. This results in big, non-portable shell one-liners saved in your shell. To remedy this, Topgrade detects which tools you use and runs the appropriate commands to update them."
section = "utils"
priority = "optional"
default-features = true

[target.'cfg(unix)'.dependencies]
nix = { version = "~0.29", features = ["hostname", "signal", "user"] }
rust-ini = "~0.21"
self_update_crate = { version = "~0.40", default-features = false, optional = true, package = "self_update", features = ["archive-tar", "compression-flate2", "rustls"] }

[target.'cfg(windows)'.dependencies]
self_update_crate = { version = "~0.40", default-features = false, optional = true, package = "self_update", features = ["archive-zip", "compression-zip-deflate", "rustls"] }
winapi = { version = "~0.3", features = ["consoleapi", "wincon"] }
parselnk = "~0.1"

[profile.release]
lto = true

[features]
default = []
self-update = ["self_update_crate"]
