[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "topgrade"
dynamic = ["version"]
description = "Upgrade all the things"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Roey Darwish Dror", email = "roey.ghost@gmail.com" },
    { name = "Thomas Schönauer", email = "t.schoenauer@hgs-wt.at" },
]
maintainers = [
    { name = "GideonBear", email = "dig-sultry-sedate@duck.com" },
]
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

urls.bugs = "https://github.com/topgrade-rs/topgrade/issues"
urls.homepage = "https://github.com/topgrade-rs/topgrade"
urls.discord = "https://discord.gg/Q8HGGWundY"


[tool.maturin]
bindings = "bin"
